# localWeather

./: .cache.sqlite  .gitignore  main.py  pyproject.toml
